sugar (0.79.0-3) UNRELEASED; urgency=low

  * Pass over maintenance of the package to the OLPC team: Change
    Maintainer, and add myself to Uploaders.
  * Build-depend on python-all-dev.
  * Build as arch-all.
  * Fix README.packaging to use "pull; fetch --tags" (not "pull -t").
  * Recommend xserver-xephyr (not xephyr). Closes: bug#470502.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 09:42:18 +0100

sugar (0.79.0-2) unstable; urgency=low

  * Drop commented out relibtoolize rules from debian/control (claiming
    relibtoolizing in 0.79.0-1 was a lie).
  * Patch src/hardware/keydialog.py to use /usr/bin/wpa_passphrase (not
    /usr/sbin/wpa_passphrase).
  * Fix Git commands in README.packaging: Cannot push all+tags in 1 go.
  * Update debian/copyright:
    + Bump copyright years for debian/* files.
    + Drop copyright and licensing info for files moved to sugar-toolkit
    + Adjust changed paths: services/shell -> service, shell/ -> src
  * Add watch file.
  * Use (and build-depend on) separately packaged python-empy. Borrow
    timestamps from similar files at build time to avoid triggering
    automake.
  * Depend on sugar-base, sugar-toolkit, matchbox-window-manager,
    dbus-x11, telepathy-gabble, telepathy-salut,
    telepathy-stream-engine, python-dbus, python-gst0.10, python-numpy,
    python-gobject, python-gtk2, python-telepathy, python-cairo,
    python-gnome2-desktop (for wnck), and python-hippocanvas.
  * Recommend sugar-artwork, gstreamer0.10-plugins-good, xephyr,
    network-manager and net-tools.
  * Suggest openssh-client.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 02:30:07 +0100

sugar (0.79.0-1) unstable; urgency=low

  * First official release. Closes: bug#444021.
  * New Upstream Version
  * Update CDBS tweaks:
    + Add upstream-tarball.mk to implement get-orig-source target.
      Pristine-tar Git branch is maintained too, but git-buildpackage
      does not yet support recreating the bz2 tarball