@@ -3,8 +3,9 @@
 # Copyright © 2007-2008 Jonas Smedegaard <dr@jones.dk>
 
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
+DEB_PYTHON_SYSTEM = pycentral
 include debian/cdbs/1/rules/upstream-tarball.mk
-include /usr/share/cdbs/1/class/autotools.mk
+include debian/cdbs/1/class/py-compile.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include debian/cdbs/1/rules/copyright-check.mk
 include debian/cdbs/1/rules/buildinfo.mk
@@ -15,19 +16,16 @@ DEB_UPSTREAM_URL = http://dev.laptop.org/pub/sugar/sources/$(DEB_UPSTREAM_PACKAG
 DEB_UPSTREAM_TARBALL_EXTENSION = tar.bz2
 DEB_UPSTREAM_TARBALL_MD5 = e10b794279af18fc4fd0d7de04c76bc8
 
-binary-install/$(pkg)::
-	dh_pycentral
-
 # Avoid patched files triggering autotools regeneration
 post-patches::
 	touch -r Makefile.am data/Makefile.am
 	[ ! -f Makefile.in ] || touch -r Makefile.in data/Makefile.in
 
 # Needed by upstream build process
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libglib2.0-dev, python-all-dev, python-gtk2-dev, gettext, intltool, shared-mime-info
+CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libglib2.0-dev, python-gtk2-dev, gettext, intltool, shared-mime-info
 
 # Needed for our packaging routines
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-central, python-empy
+CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-empy
 
 # Merge duplicate build-dependencies
 CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
